# libmongocrypt

./: .clang-format  .clang-tidy  .earthlyignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .lsan-suppressions  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Earthfile  NEWS  README.md  TODO.md  genindex.html  index.html  integrating.md  mongocrypt-crypto.c  mongocrypt-kms.c  mongocrypt-parsing.c  mongocrypt-private.h  mongocrypt.c  mongocrypt.h  mongocrypt_decrypt_finish.html  mongocrypt_decrypt_prepare.html  mongocrypt_destroy.html  mongocrypt_encrypt_finish.html  mongocrypt_encrypt_prepare.html  mongocrypt_new.html  mongocrypt_t.html  notes.md  objects.inv  search.html  searchindex.js
.evergreen/: benchmark-java.sh  benchmark-python.sh  build_all.sh  build_install_bson.sh  calc_release_version_selftest.sh  clang-tidy.sh  clone-mongo-c-driver.sh  cmake.sh  compile.sh  compile_cs.sh  config.yml  create-packages-and-repos.sh  ctest.sh  debian_package_build.sh  earthly.sh  ensure-cmake.sh  ensure-ninja.sh  env-run.sh  find-cmake.sh  init.sh  init.test.sh  install-build-tools.sh  linker-tests.sh  pkgconfig-tests.sh  pre.sh  sbom.sh  (+11 more)
.evergreen/linker_tests_deps/app/: CMakeLists.txt  app.c
bindings/node/: .eslintrc.json  .gitignore  .mocharc.json  .npmignore  .prettierrc.json  CHANGELOG.md  CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  package-lock.json  package.json  sbom.json  tsconfig.json
bindings/node/.evergreen/: check-lint.sh  find_cmake.sh  install-dependencies.sh  prebuild.sh  setup_environment.sh  test.sh
bindings/node/addon/: mongocrypt.cc  mongocrypt.h
bindings/node/etc/: README.hbs  build-static.sh  build.js  prepare.js
bindings/node/lib/: autoEncrypter.js  buffer_pool.js  clientEncryption.js  common.js  credentialsProvider.js  cryptoCallbacks.js  errors.js  index.js  mongocryptdManager.js  stateMachine.js
bindings/node/lib/providers/: azure.js  index.js  utils.js
bindings/node/src/: index.ts  mongocrypt.cc  mongocrypt.h
bindings/node/test/: autoEncrypter.test.js  bindings.test.ts  clientEncryption.test.js  common.test.js  credentialsProvider.test.js  cryptoCallbacks.test.js  index.test.js  index.test.ts  mongocryptdManager.test.js  release.test.js  release.test.ts  requirements.helper.js  stateMachine.test.js  tsconfig.json
bindings/node/test/data/: encrypted-document.json  key-document.json
bindings/node/test/providers/: credentialsProvider.test.js
bindings/node/test/tools/: chai-addons.js  mongodb_reporter.js  utils.js
bindings/node/test/types/: index.test-d.ts
bindings/python/: .gitignore  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.rst  RELEASE.rst  build-manylinux-wheel.sh  fix_ssl.py  handle_libmongocrypt.sh  hatch_build.py  pyproject.toml  release.sh  requirements-test.txt  requirements-text.txt  requirements.txt  sbom.json  setup.py  strip_header.py  synchro.py  test-requirements.txt  update-sbom.sh
bindings/python/.evergreen/: integ-setup.sh  integ-teardown.sh  integ-test.sh  test.sh  utils.sh
bindings/python/pymongocrypt/: __init__.py  auto_encrypter.py  binary.py  binding.py  compat.py  credentials.py  crypto.py  errors.py  explicit_encrypter.py  mongocrypt.py  options.py  state_machine.py  version.py
bindings/python/pymongocrypt/asynchronous/: auto_encrypter.py  credentials.py  explicit_encrypter.py  mongocrypt.py  state_machine.py
bindings/python/pymongocrypt/synchronous/: auto_encrypter.py  credentials.py  explicit_encrypter.py  mongocrypt.py  state_machine.py
bindings/python/scripts/: build-manylinux-wheel.sh  get-libmongocrypt.sh  release.sh  repair-linux-wheel.sh  synchro.py  synchro.sh  update-version.sh  update_binding.py
bindings/python/test/: __init__.py  test_binding.py  test_crypto.py  test_mongocrypt.py
bindings/python/test/data/: collection-info.json  encrypted-command-reply.json  encrypted-command.json  encrypted-field-config-map.json  key-document-azure.json  key-document-gcp.json  key-document.json  key-filter.json  kms-reply-azure.txt  kms-reply-gcp.txt  mongocryptd-command.json  mongocryptd-reply.json  schema-map.json
bindings/python/test/data/compact/success/: encrypted-field-config-map.json  encrypted-payload.json
bindings/python/test/data/fle2-find-range-explicit-v2/int32/: encrypted-payload-2.json  encrypted-payload-second.json  encrypted-payload.json  rangeopts.json
bindings/python/test/data/fle2-find-rangePreview-explicit/int32/: rangeopts.json
bindings/python/test/data/fle2-text-search/: encrypted-payload.json  textopts.json
bindings/python/test/data/keys/: 12345678123498761234123456789014-local-document.json
bindings/python/test/performance/: perf_test.py
kms-message/: CMakeLists.txt
kms-message/src/: hexlify.c  kms_azure_request.c  kms_b64.c  kms_crypto.h  kms_crypto_apple.c  kms_crypto_libcrypto.c  kms_crypto_openssl.c  kms_crypto_windows.c  kms_endian_private.h  kms_gcp_request.c  kms_kmip_item_type_private.h  kms_kmip_reader_writer.c  kms_kmip_reader_writer_private.h  kms_kmip_request.c  kms_kmip_response.c  kms_kmip_response_parser.c  kms_kmip_response_parser_private.h  kms_kmip_response_private.h  kms_kmip_result_reason_private.h  kms_kmip_result_status_private.h  kms_kmip_tag_type.c  kms_kmip_tag_type_private.h  kms_kv_list.c  kms_message_private.h  kms_port.c  kms_request.c  kms_request_opt.c  kms_request_str.c  kms_request_str.h  kms_response.c  kms_response_parser.c  kms_status.c  kms_status_private.h  sort.c
kms-message/src/kms_message/: kms_b64.h  kms_kmip_request.c  kms_kmip_request.h  kms_kmip_response.h  kms_kmip_response_parser.h  kms_message.h  kms_request.h  kms_request_opt.h  kms_response.h  kms_status.h
kms-message/test/: test_kmip_reader_writer.c  test_kms.c  test_kms.h  test_kms_assert.h  test_kms_azure_online.c  test_kms_gcp_online.c  test_kms_kmip_online.c  test_kms_kmip_request.c  test_kms_kmip_response.c  test_kms_kmip_response_parser.c  test_kms_online_util.c  test_kms_online_util.h  test_kms_request.c  test_kms_request.h  test_kms_status.c  test_kms_util.c  test_kms_util.h
(+1174 files in other folders)
